--- a/inji-web/package.json
+++ b/inji-web/package.json
@@ -18,6 +18,7 @@
     "i18next": "^23.11.2",
     "postcss-cli": "^11.0.0",
     "react": "^18.3.1",
+    "react-cookie": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.0",
     "react-icons": "^5.3.0",
