--- a/inji-web/nginx.conf
+++ b/inji-web/nginx.conf
@@ -2,6 +2,8 @@ server {
     listen 3004;
     # Serve static files, if any
     # Default location for normal static files
+
+    set $mimoto_backend_url "http://mimoto-service:8099/v1/mimoto/";
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
@@ -21,7 +23,7 @@ server {
     }
     # Proxy API requests to mimoto-service
     location /v1/mimoto/ {
-        proxy_pass http://mimoto-service:8099/v1/mimoto/;
+        proxy_pass $mimoto_backend_url;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
